# basecrawl

./: .gitignore  Cargo.toml  MIRROR.md  README.md
.github/workflows/: ci.yml  publish.yml
bindings/c/: CMakeLists.txt  example.c
bindings/c/include/: basecrawl.h
bindings/c/tests/: assert_all_bindings_parity.py  assert_scrapeproof.cmake  assert_semantics.cmake
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
bindings/node/src/: lib.rs
bindings/node/tests/: cross-binding-parity.test.js  linux-publish-honesty.test.js  scrapeproof.test.js
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/basecrawl/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_cross_binding_parity.py  test_scrapeproof.py
crates/basecrawl/: Cargo.toml
crates/basecrawl-core/: Cargo.toml
crates/basecrawl-core/src/: attestation.rs  batch.rs  canonical.rs  captcha_solver.rs  charset.rs  cli.rs  crawl.rs  egress.rs  error.rs  extract.rs  fetch.rs  format.rs  html.rs  lib.rs  links.rs  map_lite.rs  markdown.rs  pagination.rs  product_request.rs  proxy.rs  robots.rs  screenshot.rs  serve.rs  stealth.rs  url_validation.rs
crates/basecrawl-core/tests/: advanced_nav.rs  attestation_quote.rs  canonicalization.rs  captcha_solver_provider.rs  cdp_stealth_depth.rs  cli.rs  cross_stealth_integrity.rs  deadline_budget.rs  egress_redaction.rs  enclave_attested_rtt_echo.rs  fingerprint_depth.rs  fingerprint_security_invariants.rs  hardpath_challenge_solve_or_block.rs  host_visible_redaction.rs  html_rawhtml.rs  http_fetch.rs  js_render.rs  json_extraction.rs  links.rs  live_residual_smoke.rs  markdown.rs  open_web_smoke.rs  politeness_cookieauth_resource_caps.rs  product_breadth.rs  proxy_composer_chromium.rs  proxy_egress.rs  proxy_live_oxylabs.rs  proxy_sticky_country_class.rs  robots_sitemap.rs  screenshot.rs  seeded_fingerprint.rs  serve_http.rs  soft_tls_impersonate.rs  stealth_identity.rs  tls_capture.rs  unlock_challenge_honesty.rs
crates/basecrawl-core/tests/common/: mod.rs
crates/basecrawl-ffi/: Cargo.toml
crates/basecrawl-ffi/src/: lib.rs
crates/basecrawl-fp/: Cargo.toml
crates/basecrawl-fp/src/: lib.rs
crates/basecrawl-headless-chrome/: Cargo.toml  LICENSE.md  README.md
crates/basecrawl-headless-chrome/src/browser/: mod.rs  process.rs
crates/basecrawl-headless-chrome/src/browser/tab/: mod.rs
crates/basecrawl-headless-chrome/src/browser/transport/: mod.rs  waiting_call_registry.rs  web_socket_connection.rs
crates/basecrawl-headless-chrome/tests/: basecrawl_fork_surface.rs  connect_to_url.rs
crates/basecrawl-proof/: Cargo.toml
crates/basecrawl-proof/schema/: scrapeproof.schema.json
crates/basecrawl-proof/src/: lib.rs
crates/basecrawl-render/: Cargo.toml
crates/basecrawl-render/src/: lib.rs
crates/basecrawl-seal/: Cargo.toml
crates/basecrawl-seal/src/: browser_dns.rs  dns.rs  error.rs  identity.rs  keyrelease.rs  lib.rs  redact.rs  result.rs  task.rs
crates/basecrawl-seal/tests/: doh_and_tls_termination.rs  host_visible_redaction.rs  key_release_and_decrypt.rs  result_seal_to_committee.rs
crates/basecrawl/src/: main.rs
docs/: SECURITY.md  TRUST_MODEL.md  architecture.md  image-rotation-on-cve.md  serve.md  tcb-inventory.md
docs/operators/: deploy.md  install-and-publish.md  product-breadth-and-extract.md  proxy-and-egress.md
image/: Dockerfile.serve  allowlist.json  attest.py  buildkit_provenance.py  cve_rotation.py  docker-compose.yml  measurement-reconciliation.json  measurement_allowlist.py  phala-app-compose.json  reproducibility.py
image/evidence/m2/: manifest.json
image/evidence/m2/execution/: reconciliation.json
image/tests/: test_attest.py  test_buildkit_provenance.py  test_claims_honesty_docs.py  test_cve_rotation.py  test_measurement_allowlist.py  test_reproducibility.py
tools/benchmark/: MATRIX.md  README.md
tools/benchmark/benchmark/: __init__.py  cli.py  matrix.py
tools/benchmark/tests/: test_matrix.py
