[workspace]
resolver = "2"
# Historical vendor tree retained for reference; publishable fork lives under crates/.
exclude = ["vendor/headless_chrome"]
members = [
    "bindings/node",
    "bindings/python",
    "crates/basecrawl",
    "crates/basecrawl-core",
    "crates/basecrawl-ffi",
    "crates/basecrawl-fp",
    "crates/basecrawl-headless-chrome",
    "crates/basecrawl-proof",
    "crates/basecrawl-render",
    "crates/basecrawl-seal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/BaseIntelligence/basecrawl"
homepage = "https://github.com/BaseIntelligence/basecrawl"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli"] }
rustls = { version = "0.23.41", default-features = false, features = ["std", "ring"] }
webpki-roots = "1.0.8"
httparse = "1.10"
flate2 = "1.1"
brotli = "8.0"
x509-parser = "0.18"
sha2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
crypto_box = { version = "0.9.1", default-features = false, features = ["std", "seal", "salsa20", "getrandom"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
scraper = "0.27"
ego-tree = "0.11"
# Dual path+version: monorepo builds use path; published packages resolve version on crates.io.
basecrawl-proof = { path = "crates/basecrawl-proof", version = "0.1.0" }
basecrawl-fp = { path = "crates/basecrawl-fp", version = "0.1.0" }
basecrawl-seal = { path = "crates/basecrawl-seal", version = "0.1.0" }
basecrawl-render = { path = "crates/basecrawl-render", version = "0.1.0" }
basecrawl-core = { path = "crates/basecrawl-core", version = "0.1.0" }
basecrawl-ffi = { path = "crates/basecrawl-ffi", version = "0.1.0" }
# Prefer the basecrawl fork package (lib name remains `headless_chrome`).
# Dual path+version: monorepo builds use path; published dependents resolve version on crates.io.
headless_chrome = { package = "basecrawl-headless-chrome", path = "crates/basecrawl-headless-chrome", version = "0.1.0" }
base64 = "0.22"
png = "0.17"
encoding_rs = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
quick-xml = "0.39"
pdf-extract = "0.12"
zip = { version = "7.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
napi = { version = "3", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "3"

[profile.release]
opt-level = 3
