[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "basecrawl"
version = "0.1.0"
description = "Python SDK for the basecrawl ScrapeProof crawler"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
module-name = "basecrawl._basecrawl"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "pytest>=8.3",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
