[package]
name = "basecrawl-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Stable C ABI and shared option bridge for basecrawl SDK bindings"

[lib]
name = "basecrawl_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
basecrawl-core = { path = "../basecrawl-core" }
serde.workspace = true
serde_json.workspace = true
