[package]
name = "basecrawl-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Stable C ABI and shared option bridge for basecrawl SDK bindings"

[lib]
name = "basecrawl_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
basecrawl-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
