[package]
name = "basecrawl-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Canonical ScrapeProof types and serialization for basecrawl"

[dependencies]
serde.workspace = true
serde_json.workspace = true
